--- a/UIPage.html
+++ b/UIPage.html
@@ -38,6 +38,48 @@
 	</body>
 
 	<script>
+
+		var instructions = new Array();
+		function loadJSON(callback) {
+
+		    var xobj = new XMLHttpRequest();
+		    xobj.overrideMimeType("application/json");
+		    xobj.open('GET', 'valid.json', true);
+		    xobj.onreadystatechange = function() {
+		        if (xobj.readyState == 4 && xobj.status == "200") {
+
+		            // .open will NOT return a value but simply returns undefined in async mode so use a callback
+		            callback(xobj.responseText);
+
+		        }
+		    }
+		    xobj.send(null);
+
+		}
+
+		// Call to function with anonymous callback
+	loadJSON(function(response) {
+	    // Do Something with the response e.g.
+	    jsonresponse = JSON.parse(response);
+
+	    // Assuming json data is wrapped in square brackets as Drew suggests
+	    var i = 0;
+	    while (i<jsonresponse.length) {
+	    	var j = 0;
+	    	while(j<jsonresponse.length) {
+	    		//console.log(i+ " " + j+ " " + jsonresponse[i][j].action)
+	    		if (jsonresponse[i][j].action === "move") {
+	    			instructions.push(jsonresponse[i][j]);
+	    		}
+	    		j++;
+	    	}
+	    	i++;
+	    }
+	});
+
+
+
+
 		var canvas = document.getElementById("myCanvas");
 		var ctx = canvas.getContext("2d");
 
@@ -50,6 +92,7 @@
 
 		var trucks= new Array();
 		var stores = new Array();
+
 		var z;
 		for (z = 0; z < 3; z++) {
 			var truckToAdd = { x:0, y:0}
@@ -92,8 +135,19 @@
 
 		  window.requestAnimationFrame(loop)
 		})
+
+		var instc = 0;
 		document.addEventListener('mousedown', function(event) {
 		  if (event.button === 0) {
+		  	//console.log("clicking");
+		  	//console.log(instructions);
+		  	if(instc < instructions.length) {
+		  		console.log(instructions[instc]);
+		  		trucks[instructions[instc].truck].x = instructions[instc].x * canvas.width/wdivisions;
+		  		trucks[instructions[instc].truck].y = instructions[instc].y * canvas.height/hdivisions;
+		  		instc++;
+		  	}
+		  	/*
 		    trucks[0].x += (canvas.width/wdivisions)
 		    trucks[0].y += (canvas.height/hdivisions)
 
@@ -102,6 +156,7 @@
 
 		    trucks[2].x += (2*canvas.width/wdivisions)
 		    trucks[2].y += (4*canvas.height/hdivisions)
+		    */
 		  }
 		})
 
